--- a/css/google.css
+++ b/css/google.css
@@ -97,7 +97,7 @@
     background-position: 0 -138px;
     background-repeat: repeat-x;
     border-bottom: 1px solid #000;
-    font-size: 24px;
+    font-size: 16px;
     height: 29px;
     _height: 30px;
     opacity: 1;
@@ -184,7 +184,23 @@
     display: block;
     list-style: none;
     margin: 0;
-    padding: 0
+    padding: 0;
+
+    background-color: #2d2d2d;
+    background-image: none;
+    _background-image: none;
+    background-position: 0 -138px;
+    background-repeat: repeat-x;
+    border-bottom: 1px solid #000;
+    font-size: 16px;
+    height: 29px;
+    _height: 30px;
+    opacity: 1;
+    filter: alpha(opacity=100);
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 990
 }
 
 .gbmc {
@@ -195,17 +211,14 @@
     zoom: 1
 }
 
-.gbt {
+.gbtc li{
     position: relative;
     display: -moz-inline-box;
     display: inline-block;
-    line-height: 27px;
+    line-height: 30px;
     padding: 0;
-    vertical-align: top
-}
-
-.gbt {
-    *display: inline
+    vertical-align: top;
+    margin-left: 27px;
 }
 
 .gbzt, .gbgt {
@@ -221,7 +234,8 @@
     *display: inline-block;
     padding: 0 5px;
     position: relative;
-    z-index: 1000
+    z-index: 1000;
+    color: #ccc !important;
 }
 
 .gbts {
@@ -231,19 +245,6 @@
 .gbzt .gbts {
     display: inline;
     zoom: 1
-}
-
-.gbto .gbts {
-    background: #fff;
-    border-color: #bebebe;
-    color: #36c;
-    padding-bottom: 1px;
-    padding-top: 2px
-}
-
-.gbz0l .gbts {
-    color: #fff;
-    font-weight: bold
 }
 
 .gbtsa {
@@ -263,16 +264,6 @@
     border-top-width: 0
 }
 
-.gbtb .gbts {
-    background: url(//ssl.gstatic.com/gb/images/b_8d5afc09.png);
-    _background: url(//ssl.gstatic.com/gb/images/b8_3615d64d.png);
-    background-position: -27px -22px;
-    border: 0;
-    font-size: 0;
-    padding: 29px 0 0;
-    *padding: 27px 0 0;
-    width: 1px
-}
 
 .gbzt:hover, .gbzt:focus, .gbgt-hvr, .gbgt:focus {
     background-color: #4c4c4c;
@@ -288,10 +279,6 @@
     min-width: 99%
 }
 
-.gbz0l .gbtb2 {
-    border-top-color: #dd4b39 !important
-}
-
 #gbi4s, #gbi4s1 {
     font-weight: bold
 }
@@ -299,69 +286,6 @@
 #gbg6.gbgt-hvr, #gbg6.gbgt:focus {
     background-color: transparent;
     background-image: none
-}
-
-.gbg4a {
-    font-size: 0;
-    line-height: 0
-}
-
-.gbg4a .gbts {
-    padding: 27px 5px 0;
-    *padding: 25px 5px 0
-}
-
-.gbto .gbg4a .gbts {
-    padding: 29px 5px 1px;
-    *padding: 27px 5px 1px
-}
-
-#gbi4i, #gbi4id {
-    left: 5px;
-    border: 0;
-    height: 24px;
-    position: absolute;
-    top: 1px;
-    width: 24px
-}
-
-#gbg5 {
-    font-size: 0
-}
-
-#gbgs5 {
-    padding: 5px !important
-}
-
-.gbto #gbgs5 {
-    padding: 7px 5px 6px !important
-}
-
-#gbi5 {
-    background: url(//ssl.gstatic.com/gb/images/b_8d5afc09.png);
-    _background: url(//ssl.gstatic.com/gb/images/b8_3615d64d.png);
-    background-position: 0 0;
-    display: block;
-    font-size: 0;
-    height: 17px;
-    width: 16px
-}
-
-.gbto #gbi5 {
-    background-position: -6px -22px
-}
-
-.gbn .gbmt, .gbn .gbmt:visited, .gbnd .gbmt, .gbnd .gbmt:visited {
-    color: #dd8e27 !important
-}
-
-.gbf .gbmt, .gbf .gbmt:visited {
-    color: #900 !important
-}
-
-.gbmt, .gbml1, .gbmlb, .gbmt:visited, .gbml1:visited, .gbmlb:visited {
-    color: #36c !important;
-    text-decoration: none !important
 }
 
 .gbmt, .gbmt:visited {
