--- a/css/20150529.css
+++ b/css/20150529.css
@@ -64,18 +64,11 @@ header.hero .hero-body .hero-text {
     text-align: center;
 }
 
-h1.small {
-    font-size: 66px;
-}
-
-header.hero .hero-body .hero-text h1 {
-    font-size: 78px;
-}
-
 header.hero .hero-body .hero-text h1 {
     font-size: 48px;
     font-weight: 700;
-    letter-spacing: -4px;
+    /*letter-spacing: -4px;*/
+    letter-spacing: 4px;
 }
 
 .navbar {
