--- a/css/20150529.css
+++ b/css/20150529.css
@@ -36,7 +36,9 @@ header.hero:before {
     z-index: 10;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    /*background: rgba(0, 0, 0, 0.5);*/
+    /*background: rgba(32,32,32,0.4);*/
+    background-color: rgba(255,255,255,0.4);
 }
 
 header.hero .pattern-overlay {
@@ -105,4 +107,31 @@ header.hero .hero-body .hero-text h1 {
 
 .navbar > li > a:hover {
     color: #fff;
+}
+
+.colored {
+    box-sizing: content-box;
+    border: 0;
+    max-width: 100px;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+    height: 2px;
+    margin: 15px auto;
+    max-width: 200px;
+    margin: 20px auto;
+    border-color: #ef4035;
+}
+
+.title {
+    font-size: 52px;  letter-spacing: 15px;  text-transform: uppercase;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 900;
+}
+
+.chinese-name {
+    font-weight:600;font-family: '黑体','宋体', Arial, sans-serif;
+}
+
+.subtitle {
+    font-size: 20px;font-weight: 300;  font-family: 'Raleway', sans-serif;
 }
