--- a/css/20150529.css
+++ b/css/20150529.css
@@ -126,15 +126,15 @@ header.hero .hero-body .hero-text .title {
     font-size: 52px;  letter-spacing: 15px;  text-transform: uppercase;
     font-family: 'Raleway', sans-serif;
     font-weight: 900;
-    color: rgba(255, 255, 255, 0.9);
+    color: #fff;
 }
 
 header.hero .hero-body .hero-text .chinese-name {
     font-weight:600;font-family: '黑体','宋体', Arial, sans-serif;
-    color: rgba(255, 255, 255, 0.9);
+    color: #fff;
 }
 
 header.hero .hero-body .hero-text .subtitle {
     font-size: 20px;font-weight: 300;  font-family: 'Raleway', sans-serif;
-    color: rgba(255, 255, 255, 0.9);
+    color: #fff;
 }
